# DeepPicardIteration

./: .gitignore  README.md  environment.yaml  pyproject.toml
picard/: __init__.py  config.py  data.py  data_saver.py  dataset.py  equations.py  evaluate.py  experiment_evaluator.py  main.py  memory.py  picard_iteration.py  solution.py  solution_enforce_terminal.py  solution_jac.py  torch_func.py  utils.py
scripts/burgers/: base_100d_T1.0_w0.0_0.yaml  base_100d_T1.0_w1.0_0.yaml  diffusion_100d_T1.0_beta10.0.yaml  pinn_100d_T1.0_v16_beta10.0.yaml
scripts/fully_nonlinear/case_1/: base_100d_T1.0_w0.0_nov_0.yaml  fn_100d_T1.0.yaml  gbm_2nodes_v_100d.pt  gbm_2nodes_w_100d.pt  pinn_100d_T1.0_v16_beta10.0.yaml
scripts/fully_nonlinear/case_2/: gbm_2nodes_v_100d.pt  gbm_2nodes_w_100d.pt
scripts/fully_nonlinear/case_3/: gbm_2nodes_v_100d.pt  gbm_2nodes_w_100d.pt
scripts/hjb/: base_100d_T1.0_w0.1_0.yaml  diffusion_100d_T1.0.yaml  fn_100d_T1.0.yaml  hjb_control_100d_T1.0.yaml  hjb_nest_10d_T1.0_w1.0.yaml  mean_100d_ms=1.0_vs=2.0_5.pt  pi_100d_ms=1.0_vs=2.0_5.pt  pinn_100d_T1.0_v16.yaml
