[tool.poetry]
name = "picard"
version = "0.2.0"
description = ""
authors = [
    "Wei Hu <whuae@connect.ust.hk>",
    "Yue Zhao <yuezhao.math@gmail.com>"
]
readme = "README.md"
exclude = ["**/test"]

[tool.poetry.dependencies]
python = "^3.8"
h5py = "*"
yacs = "*"
typer = "*"
wandb = "*"

#[[tool.poetry.source]]
#name = "torch_cpu"
#url = "https://download.pytorch.org/whl/cpu"
#priority = "supplemental"
tensorboardx = "^2.6.2.2"

[tool.poetry.scripts]
picard = "picard.main:app"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
